--- a/index.html
+++ b/index.html
@@ -207,7 +207,9 @@ http://www.templatemo.com/tm-476-conquer
 								</div>
 								<div class="row">
 									<div class="col-lg-12">
-										<form action="#" method="post" class="contact-form">
+										<form action="https://www.enformed.io/25az8rdc" method="post" class="contact-form">
+											<input type="hidden" name="*redirect" value="https://ademdogu.github.io/" />
+											<input type="hidden" name="*honeypot" />
 											<div class="col-sm-6 contact-form-left">
 												<div class="form-group">
 													<input name="name" type="text" class="form-control" id="name" placeholder="Name">
