--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ http://www.templatemo.com/tm-476-conquer
 						</div>
 					</div>
 				</div>
-			</div>
+			</div
 		</header>
 	</div>
 	<div id="section2">
@@ -241,6 +241,83 @@ http://www.templatemo.com/tm-476-conquer
 										<h1>Quote of the week!</h1>
 										<p><div id = "quoteDisplay"></div></p>
 										</div>
+									</div>
+									<div class="slideshow-container">
+										<div class="mySlides fade">
+										  <img src="img/slide_show/3.jpeg" style="width:100%">
+										</div>
+										<div class="mySlides fade">
+										  <img src="img/slide_show/4.jpeg" style="width:100%">
+										</div>
+										<div class="mySlides fade">
+										  <img src="img/slide_show/5.jpeg" style="width:100%">
+										</div>
+										<div class="mySlides fade">
+											<img src="img/slide_show/6.jpeg" style="width:100%">
+										</div>
+										<div class="mySlides fade">
+											<img src="img/slide_show/7.jpeg" style="width:100%">
+										</div>
+										<div class="mySlides fade">
+											<img src="img/slide_show/8.jpeg" style="width:100%">
+										</div>
+										<div class="mySlides fade">
+											<img src="img/slide_show/9.jpeg" style="width:100%">
+										</div>
+										<div class="mySlides fade">
+											<img src="img/slide_show/10.jpeg" style="width:100%">
+										</div>
+										<div class="mySlides fade">
+											<img src="img/slide_show/11.jpeg" style="width:100%">
+										</div>
+										<div class="mySlides fade">
+											<img src="img/slide_show/12.jpeg" style="width:100%">
+										</div>
+										<div class="mySlides fade">
+											<img src="img/slide_show/13.jpeg" style="width:100%">
+										</div>
+										<div class="mySlides fade">
+											<img src="img/slide_show/14.jpeg" style="width:100%">
+										</div>
+										<div class="mySlides fade">
+											<img src="img/slide_show/15.jpeg" style="width:100%">
+										</div>
+										<div class="mySlides fade">
+											<img src="img/slide_show/16.jpeg" style="width:100%">
+										</div>
+										<div class="mySlides fade">
+											<img src="img/slide_show/17.jpeg" style="width:100%">
+										</div>
+										<div class="mySlides fade">
+											<img src="img/slide_show/18.jpeg" style="width:100%">
+										</div>
+										<div class="mySlides fade">
+											<img src="img/slide_show/19.jpeg" style="width:100%">
+										</div>
+										<div class="mySlides fade">
+											<img src="img/slide_show/20.jpeg" style="width:100%">
+										</div>
+									</div>
+									<br>
+									<div style="text-align:center">
+									  <span class="dot"></span>
+									  <span class="dot"></span>
+									  <span class="dot"></span>
+										<span class="dot"></span>
+										<span class="dot"></span>
+										<span class="dot"></span>
+									  <span class="dot"></span>
+									  <span class="dot"></span>
+										<span class="dot"></span>
+										<span class="dot"></span>
+										<span class="dot"></span>
+									  <span class="dot"></span>
+									  <span class="dot"></span>
+										<span class="dot"></span>
+										<span class="dot"></span>
+										<span class="dot"></span>
+									  <span class="dot"></span>
+									  <span class="dot"></span>
 									</div>
 								</div>
 							</div>
