--- a/index.html
+++ b/index.html
@@ -8,12 +8,24 @@ http://www.templatemo.com/tm-476-conquer
 -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name=”description” content="Website for Maltese Poodle - Ares">
+	<meta name=”keywords” content="dog breeds, dog kennels, dog crate, rescue dogs, dog door, dog toys, puppy training, dog whisperer, dog training near me, dog show, how to train a puppy, how to potty train a puppy, pet dog, how to train a dog, dog trainer, dog supplies" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-133721956-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-133721956-1');
+</script>
+
 <body onload = 'newQuote();'>
 	<nav class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container">
