--- a/index.html
+++ b/index.html
@@ -130,11 +130,15 @@ http://www.templatemo.com/tm-476-conquer
 					<div class="container">
 						<div class="row">
 							<div class="col-sm-12 text-center inner our-service">
+								<div class="video1">
+										<video width="220" height="400" controls>
+											<source src="video/2.mp4" type="video/mp4">
+												Please <a href="video/2.mp4" download>download</a> the video.
+										</video>
+								</div>
 								<div class="service">
-									<h1>Services I get!</h1>
-									<p>I'm just listing the basics here <br>
-										You can always come up with new treats - will never refuse <br>
-										Special thanks to JFFD</p>
+									<h1>A-oooooo!</h1>
+									<h3>Basic services I needed listed below: </h3><br>
 									</div>
 								</div>
 							</div>
@@ -150,8 +154,9 @@ http://www.templatemo.com/tm-476-conquer
 									<div class="testimonial-content">
 										<img src="img/4-1.jpg" alt="Image">
 										<h2>Delicious and Healthy</h2>
-										<p>It's always hard to find 2 at the same time. If you've never tried never too late - Just Food For Dogs</p>
-										<a href="https://www.justfoodfordogs.com/" target="_blank" class="content-link">Try JFFD</a>
+										<p>It's always hard to find 2 at the same time. They even have ice cream in summer! If you've never tried it's not too late</p>
+										<p>Fresh meals from human-graded ingredients approved by the USDA</p>
+										<a href="https://www.justfoodfordogs.com/" target="_blank" class="content-link">Just Food For Dogs</a>
 										<br>
 									</div>
 								</div>
@@ -159,7 +164,9 @@ http://www.templatemo.com/tm-476-conquer
 									<div class="testimonial-content">
 										<img src="img/4-2.jpg" alt="Image">
 										<h2>Debby's Grooming Rocks</h2>
-										<p>I think she knows what she's doing. It's not easy to be so stylish afterall. Try her.</p>
+										<p>I think she knows what she's doing. It's not easy to be so stylish afterall. Try her</p>
+										<p>Ah before I forget, you need to get an appointment for the next month because she's always booked!
+										You can read her <a href = "https://www.yelp.com/biz/debbies-pet-grooming-san-diego-2" target="_blank">YELP reviews!!!</p>
 										<a href="http://www.debbiespetgrooming.co/" target="_blank" class="content-link">Get an appointment!</a>
 										<br>
 										<p id="redd"></p>
@@ -169,7 +176,9 @@ http://www.templatemo.com/tm-476-conquer
 									<div class="testimonial-content">
 										<img src="img/4-3.jpg" alt="Image">
 										<h2>Health and Wellness</h2>
-										<p>They've been taking care of my shots, teeth cleaning, check-ups and etc. Even tho, I don't like going there I think they are doing a fantastic job.</p>
+										<p>They've been taking care of my shots, teeth cleaning, check-ups and etc.</p>
+										<p>Even tho, I don't like going there I think they are doing a fantastic job.</p>
+										<a href="https://www.banfield.com/" target="_blank" class="content-link">Benfield</a>
 										<br>
 									</div>
 								</div>
@@ -342,7 +351,6 @@ http://www.templatemo.com/tm-476-conquer
   										<img src="img/avatar.jpg" alt="Muccuk" width="96" height="96">
   										Ares
 										</div>
-
 									</div>
 								</div>
 							</div>
@@ -418,6 +426,6 @@ http://www.templatemo.com/tm-476-conquer
         });
 
     });
-</script>
-</body>
+		</script>
+	</body>
 </html>
