Added sticky social bar

--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@ http://www.templatemo.com/tm-476-conquer
 		</div>
 	</nav>
 
+	<!-- The social media icon bar -->
+<div class="icon-bar">
+  <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+  <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
+  <a href="#" class="google"><i class="fa fa-google"></i></a>
+  <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+  <a href="#" class="youtube"><i class="fa fa-youtube"></i></a>
+</div>
+
 	<div id="section1">
 		<header id="header-area" class="intro-section">
 			<div class="container">
@@ -137,7 +146,7 @@ http://www.templatemo.com/tm-476-conquer
 								</div>
 								<div class="service">
 									<h1>A-oooooo!</h1>
-									<h3>Basic services I needed listed below: </h3><br>
+									<h1>Basic services I needed listed below: </h1><br>
 									</div>
 								</div>
 							</div>
@@ -199,7 +208,6 @@ http://www.templatemo.com/tm-476-conquer
 										<div class="tm-box-description">
 											<h2>WHY DO DOGS LICK AND CHEW ON THEIR PAWS?</h2>
 											<p class="tm-box-p"> Dogs love to chew and lick anything they can get their paws on and sometimes this includes licking and chewing on their own paws. Though this is a common behavior seen by many dogs it can be a sign of a more serious issue that requires a veterinarians assistance. These more serious cases oftentimes are associated with a more intense licking that leaves behind some side effects including discoloration, odor, swelling, or even bleeding. In any case it is a good idea to inform your veterinarian of this behavior even if it seems like nothing. Now that we know what to look for lets see some common reasons a dog might begin licking or chewing on their paws.</p>
-											<p class="tm-box-p">Dogs can face times that leave them in high stress or times where they need something to occupy their mind. When they lick their paws it can give them something to do that takes their mind off of whatever they may be facing. This can be an innocent small problem where they only lick every once in a while, or it can turn into a habitat where they lick their paws raw. In these situations it is important that you address any signs of separation anxietyto ensure they don't freak out and lick every time you walk out the door. It's also a good idea to get an interactive toy to keep your dog busy and not bored enough to lick themselves.</p>
 											<a href="https://sitstay.com/blogs/good-dog-blog/why-do-dogs-lick-and-chew-on-their-paws" target="_blank" class="content-link">Read More</a>
 										</div>
 									</div>
